# ch-bot-poc

./: README.md  create_cron_job.md  create_fcron_job.md  pyproject.toml  run_chuinibot_league.sh  run_chuinibot_wikipedia.sh
chuinibot/entrypoint/: main.py
chuinibot/infrastructure/: path_utils.py  settings.py
