[tool.poetry]
name = "chuinibot"
version = "0.1.0"
description = ""
authors = ["mf-andres <amunoz@gradiant.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyleague = "0.2.0"
typer = "^0.7.0"
requests = "^2.28.2"
pydantic = {extras = ["dotenv"], version = "^1.10.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
